--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,18 +4,17 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "twitch-bot-plus"
-version = "1.0.0"
+version = "1.0.1"
 description = "A modular Twitch chat bot framework."
 readme = "README.md"
 requires-python = ">=3.10"
-license = { text = "MIT" }
+license = "MIT"
 authors = [
   { name = "Bearium", email = "ContactMe@bearium.dev" }
 ]
 keywords = ["twitch", "bot", "irc", "chat"]
 classifiers = [
   "Programming Language :: Python :: 3",
-  "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent"
 ]
 dependencies = [
@@ -24,8 +23,11 @@ dependencies = [
 ]
 
 [tool.setuptools]
-packages = ["TwitchBotPlus"]
+package-dir = { "" = "src" }
 
 [tool.setuptools.exclude-package-data]
 TwitchBotPlus = ["tests*", "*.pyc", "__pycache__"]
 
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["TwitchBotPlus*"]
